@@ -11,6 +11,7 @@ https://github.com/dbermond/screencast/
 - fix: tests: default text watermark font name
 - fix: vaapi encoders with modern FFmpeg
 - -A/--vaapi-device option changed to -D/--hw-device, and now is used for device selection in all hardware types
+- error out when failing to create the watermark image, instead of warn and skip watermaking
 
 ### version 1.6.0 - 2020-09-19
 - added support for AOM AV1 video encoder
